Update operating hours in index.html

--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                 <div class="info-card">
                     ⏰
                     <h3>Horário</h3>
-                    <p>10h às 22h</p>
+                    <p>14h às 22h</p>
                 </div>
                 <div class="info-card">
                     <i class="fab fa-whatsapp"></i>
@@ -2430,7 +2430,7 @@
                 'kiwi': 'Kiwi',
                 'manga': 'Manga',
                 'blueberry': 'Blueberry',
-                'maca': 'Maçã'
+                'maca': 'Maçã',
             };
             return fruitMap[fruitValue] || fruitValue;
         }
